[gd_scene load_steps=15 format=3 uid="uid://bugoeyqrqspm8"]

[ext_resource type="Script" uid="uid://b7x1jwib8e8q7" path="res://core/managers/chars_manager.gd" id="1_5jwut"]
[ext_resource type="Script" uid="uid://yi8m64fqqfwo" path="res://core/managers/training_mode_manager.gd" id="2_qhom8"]
[ext_resource type="PackedScene" uid="uid://2ub817ixrwcq" path="res://stages/training_stage/training_stage.tscn" id="3_0d8n1"]
[ext_resource type="PackedScene" uid="uid://cy6etmmagty4k" path="res://core/camera/camera.tscn" id="4_b5inl"]
[ext_resource type="PackedScene" uid="uid://b0k1gdvtue4k8" path="res://inputs-history/control_layer.tscn" id="5_6lros"]
[ext_resource type="PackedScene" uid="uid://1nald7aubhkq" path="res://ui/timer/timer.tscn" id="6_8ktog"]
[ext_resource type="FontFile" uid="uid://d3d1p6icmlj67" path="res://hoshiko_satsuki/super-street-fighter-ii-large-colour.colr.ttf" id="7_qrbet"]
[ext_resource type="Script" uid="uid://c72tw245yre38" path="res://hud/feedback/feedback.gd" id="8_fk4vu"]
[ext_resource type="AudioStream" uid="uid://cwu431c4dl32l" path="res://assets/sfx/na_vls/ready3.wav" id="9_8ktog"]
[ext_resource type="AudioStream" uid="uid://dilaaj8c0gigm" path="res://assets/sfx/na_vls/fight.wav" id="10_qrbet"]
[ext_resource type="AudioStream" uid="uid://srwujsrlch7m" path="res://assets/sfx/na_vls/youwin.wav" id="11_fk4vu"]
[ext_resource type="AudioStream" uid="uid://5v3pdn0s5i6c" path="res://assets/sfx/na_vls/drawgame.wav" id="12_atjal"]
[ext_resource type="AudioStream" uid="uid://cbqcx0g6gti10" path="res://assets/bgm/training_stage.ogg" id="13_qnjw7"]

[sub_resource type="LabelSettings" id="LabelSettings_atjal"]
font = ExtResource("7_qrbet")
font_size = 75

[node name="training_main" type="Node2D"]

[node name="training_game_manager" type="Node2D" parent="."]
script = ExtResource("2_qhom8")

[node name="training_stage" parent="." instance=ExtResource("3_0d8n1")]

[node name="chars" type="Node2D" parent="."]
script = ExtResource("1_5jwut")
charnode_path = NodePath(".")

[node name="Camera" parent="." instance=ExtResource("4_b5inl")]
position = Vector2(630, 511)

[node name="control_layer" parent="." instance=ExtResource("5_6lros")]

[node name="Control" parent="." instance=ExtResource("6_8ktog")]

[node name="p1_spawn_pos" type="StaticBody2D" parent="."]
position = Vector2(377, 660)

[node name="p2_spawn_pos" type="StaticBody2D" parent="."]
position = Vector2(867, 660)

[node name="cam_pos" type="StaticBody2D" parent="."]
position = Vector2(203, 261)

[node name="layer" type="CanvasLayer" parent="."]

[node name="feedback" type="Label" parent="layer"]
offset_left = 471.0
offset_top = 360.0
offset_right = 809.0
offset_bottom = 422.0
text = "READY?"
label_settings = SubResource("LabelSettings_atjal")
horizontal_alignment = 1
script = ExtResource("8_fk4vu")

[node name="sfxs" type="Node" parent="layer"]

[node name="ready?" type="AudioStreamPlayer" parent="layer/sfxs"]
stream = ExtResource("9_8ktog")
volume_db = -19.0

[node name="fight" type="AudioStreamPlayer" parent="layer/sfxs"]
stream = ExtResource("10_qrbet")
volume_db = -19.0

[node name="you win" type="AudioStreamPlayer" parent="layer/sfxs"]
stream = ExtResource("11_fk4vu")
volume_db = -19.0

[node name="draw" type="AudioStreamPlayer" parent="layer/sfxs"]
stream = ExtResource("12_atjal")
volume_db = -19.0

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_qnjw7")
volume_db = -35.0
autoplay = true
parameters/looping = true
